--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Amazon.com</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+    <!-- navbar starting here -->
+    <nav>
+        <div class="navbar-1">
+            <div class="menu-1"><img src="/image/amazonlogo.jpg" alt="image"></div>
+            <div class="menu-2">
+                <div class="navchild"><img src="/image/address logo.jpeg" alt="logo"></div>
+                <div class="navchild2">
+                    <p>Hello</p>
+                    <h4>Select your address</h4>
+                </div>
+            </div>
+            <div class="menu-3">
+                <div class="searchbar-1">All<i class="fa fa-caret-down"></i></div>
+                <div class="searchbar-2"><input type="text"></div>
+                <div class="searchbar-3"> <button type="submit"><i class="fa fa-search"></i></button></div>
+            </div>
+            <div class="menu-4">country</div>
+            <div class="menu-5">sign in</div>
+            <div class="menu-6">orders</div>
+            <div class="menu-7">cart</div>
+
+        </div>
+    </nav>
+
+    <!-- please you can work start here  and don't change in the navbar because i am working on it -->
 </body>
+
 </html>
