--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Amazon.com</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    
 </head>
 
 <body>
@@ -23,7 +25,7 @@
                 </div>
             </div>
             <div class="menu-3">
-                <div class="searchbar-1">All<i class="fa fa-caret-down"></i></div>
+                <div class="searchbar-1">All<i class="fa fa-caret-down arr"></i></div>
                 <div class="searchbar-2"><input type="text"></div>
                 <div class="searchbar-3"> <button type="submit"><i class="fa fa-search"></i></button></div>
             </div>
