--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="menu-3">
                 <div class="searchbar-1">All<i class="fa fa-caret-down arr"></i></div>
                 <div class="searchbar-2"><input type="text"></div>
-                <div class="searchbar-3"> <button type="submit"><i class="fa fa-search"></i></button></div>
+                <div class="searchbar-3"> <button type="submit"><i class="fa fa-search fa-2x"></i></button></div>
             </div>
             <div class="menu-4">country</div>
             <div class="menu-5">sign in</div>
