--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
     <title>Amazon.com</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
-    
+
+
 </head>
 
 <body>
     <!-- navbar starting here -->
     <nav>
         <div class="navbar-1">
-            <div class="menu-1"><img src="/image/amazonlogo.jpg" alt="image"></div>
+            <div class="menu-1">
+                <div class="logo"><img src="/image/amazonlogo.jpg" alt="image"></div>
+            </div>
             <div class="menu-2">
-                <div class="navchild"><img src="/image/address logo.jpeg" alt="logo"></div>
-                <div class="navchild2">
-                    <p>Hello</p>
-                    <h4>Select your address</h4>
+                <div class="address">
+                    <div class="navchild"><img src="/image/address logo.jpg" alt="logo"></div>
+                    <div class="navchild2">
+                        <p>Hello</p>
+                        <h4>Select your address</h4>
+                    </div>
                 </div>
             </div>
             <div class="menu-3">
@@ -29,10 +33,26 @@
                 <div class="searchbar-2"><input type="text"></div>
                 <div class="searchbar-3"> <button type="submit"><i class="fa fa-search fa-2x"></i></button></div>
             </div>
-            <div class="menu-4">country</div>
-            <div class="menu-5">sign in</div>
-            <div class="menu-6">orders</div>
-            <div class="menu-7">cart</div>
+            <div class="menu-4">
+                <div class="country"><img src="https://upload.wikimedia.org/wikipedia/en/4/41/Flag_of_India.svg"
+                        width="24px" height="18px" style="border-radius:2px; position: relative; top:5px;" alt="flag"
+                        class="imagecountry">
+                    <span><i class="fa fa-caret-down fa-xs coun"></i></span>
+                </div>
+            </div>
+            <div class="menu-5">
+                <div class="signchild-1">Hello, sign in</div>
+                <div class="signchild-2">Account & Lists<i class="fa fa-caret-down fa-xs sign"></i></div>
+            </div>
+            <div class="menu-6">
+                <div class="order">
+                    <p>Returns</p>
+                    <h4>& Orders</h4>
+                </div>
+            </div>
+            <div class="menu-7">
+                <div class="cart"><img src="image/cart.jpg" alt=""></div>
+            </div>
 
         </div>
     </nav>
