--- a/index.html
+++ b/index.html
@@ -13,29 +13,61 @@
 <body>
     <!-- navbar starting here -->
     <nav>
-        <div class="navbar-1">
-            <div class="menu-1"><img src="/image/amazonlogo.jpg" alt="image"></div>
-            <div class="menu-2">
-                <div class="navchild"><img src="/image/address logo.jpeg" alt="logo"></div>
-                <div class="navchild2">
-                    <p>Hello</p>
-                    <h4>Select your address</h4>
-                </div>
-            </div>
-            <div class="menu-3">
-                <div class="searchbar-1">All<i class="fa fa-caret-down"></i></div>
-                <div class="searchbar-2"><input type="text"></div>
-                <div class="searchbar-3"> <button type="submit"><i class="fa fa-search"></i></button></div>
-            </div>
-            <div class="menu-4">country</div>
-            <div class="menu-5">sign in</div>
-            <div class="menu-6">orders</div>
-            <div class="menu-7">cart</div>
-
+      <div class="navbar-1">
+        <div class="menu-1"><img src="/image/amazonlogo.jpg" alt="image"></div>
+        <div class="menu-2">
+          <div class="navchild"><img src="/image/address logo.jpeg" alt="logo"></div>
+          <div class="navchild2">
+            <p>Hello</p>
+            <h4>Select your address</h4>
+          </div>
         </div>
+        <div class="menu-3">
+          <div class="searchbar-1">All<i class="fa fa-caret-down"></i></div>
+          <div class="searchbar-2"><input type="text"></div>
+          <div class="searchbar-3"> <button type="submit"><i class="fa fa-search"></i></button></div>
+        </div>
+        <div class="menu-4">country</div>
+        <div class="menu-5">sign in</div>
+        <div class="menu-6">orders</div>
+        <div class="menu-7">cart</div>
+      </div>
     </nav>
 
-    <!-- please you can work start here  and don't change in the navbar because i am working on it -->
+    <!-- Carousel Amazon Promotional Images (Marilou) -->
+    <div class="carousel-center">
+      <div class="carousel-container">
+        <div class="carousel" id="carousel-main">
+          <section class="carousel-imagescreen">
+            <img src="carousel-images/last_minute_deal.jpg" alt="Last Minute Deal Amazon Image">
+          </section>
+          <section class="carousel-imagescreen">
+            <img src="carousel-images/amazon_prime.png" alt="Amazon Prime Image">
+          </section>
+          <section class="carousel-imagescreen">
+            <img src="carousel-images/probeer30dagen_prijs.jpg" alt="30 days free Amazon Prime Image">
+          </section>
+          <section class="carousel-imagescreen">
+            <img src="carousel-images/table_setting.jpg" alt="Last Minute Deal Amazon Image">
+          </section>
+          <section class="carousel-imagescreen">
+            <img src="carousel-images/ontdek_apparaten.jpg" alt="Gadgets Amazon Image">
+          </section>
+          <section class="carousel-imagescreen">
+            <img src="carousel-images/new_gadgets.jpg" alt="New Gadgets Amazon Image">
+          </section>
+
+        <!-- Arrow left and right for the carousel-->
+          <div class="left-arrow">
+            <span class="chevron left"></span>
+          </div>
+          <div class="right-arrow">
+            <span class="chevron right"></span>
+          </div>
+        </div>
+      </div>
+    </div>
+
 </body>
 
 </html>
