--- a/index.html
+++ b/index.html
@@ -7,104 +7,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon.com</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 
 
 </head>
 
 <body>
-    <!-- navbar starting here -->
-    <nav>
-      <div class="navbar-1">
-        <div class="menu-1">
-          <div class="logo"><img src="image/amazonlogo.jpg" alt="image"></div>
-        </div>
-        <div class="menu-2">
-          <div class="address">
-            <div class="navchild"><img src="image/address logo.jpg" alt="logo"></div>
-            <div class="navchild2">
-              <p>Hello</p>
-              <h4>Select your address</h4>
+
+    <body>
+        <!-- navbar starting here -->
+        <nav>
+            <div class="navbar-1">
+                <div class="menu-1">
+                    <div class="logo"><img src="/image/amazonlogo.jpg" alt="image"></div>
+                </div>
+                <div class="menu-2">
+                    <div class="address">
+                        <div class="navchild"><img src="/image/address logo.jpg" alt="logo"></div>
+                        <div class="navchild2">
+                            <div class="address-1">Hello</div>
+                            <div class="signchild-2">Select your address</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-3">
+                    <div class="searchbar-1">All<i class="fa fa-caret-down arr"></i></div>
+                    <div class="searchbar-2"><input type="text"></div>
+                    <div class="searchbar-3"> <button type="submit"><i class="fa fa-search fa-2x"></i></button></div>
+                </div>
+                <div class="menu-4">
+                    <div class="country"><img src="https://upload.wikimedia.org/wikipedia/en/4/41/Flag_of_India.svg"
+                            width="24px" height="18px" style="border-radius:2px; position: relative; top:5px;"
+                            alt="flag" class="imagecountry">
+                        <span><i class="fa fa-caret-down fa-xs coun"></i></span>
+                    </div>
+                </div>
+                <div class="menu-5">
+                    <div class="signchild-1">Hello, sign in</div>
+                    <div class="signchild-2">Account & Lists<i class="fa fa-caret-down fa-xs sign"></i></div>
+                </div>
+                <div class="menu-6">
+                    <div class="order">
+                        <div class="order-1">Returns</div>
+                        <div class="signchild-2">& Orders</div>
+                    </div>
+                </div>
+                <div class="menu-7">
+                    <div class="cart"><img src="image/cart.jpg" alt=""></div>
+                </div>
+
             </div>
-          </div>
-        </div>
-        <div class="menu-3">
-          <div class="searchbar-1">All<i class="fa fa-caret-down arr"></i></div>
-          <div class="searchbar-2"><input type="text"></div>
-          <div class="searchbar-3"> <button type="submit"><i class="fa fa-search fa-2x"></i></button></div>
-        </div>
-        <div class="menu-4">
-          <div class="country">
-            <img src="https://upload.wikimedia.org/wikipedia/en/4/41/Flag_of_India.svg"
-              width="24px" height="18px" style="border-radius:2px; position: relative; top:5px;" alt="flag"
-              class="imagecountry">
-            <span>
-              <i class="fa fa-caret-down fa-xs coun"></i>
-            </span>
-          </div>
-        </div>
-        <div class="menu-5">
-          <div class="signchild-1">Hello, sign in</div>
-          <div class="signchild-2">Account & Lists<i class="fa fa-caret-down fa-xs sign"></i></div>
-        </div>
-        <div class="menu-6">
-          <div class="order">
-            <p>Returns</p>
-            <h4>& Orders</h4>
-          </div>
-        </div>
-          <div class="menu-7">
-            <div class="cart">
-              <img src="image/cart.jpg" alt="">
+        </nav>
+
+        <!-- Carousel Amazon Promotional Images (Marilou) -->
+        <section>
+
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="carousel-images/last_minute_deal.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="carousel-images/new_gadgets.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="carousel-images/ontdek_apparaten.jpg" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="carousel-images/probeer30dagen_prijs.jpg" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="carousel-images/table_setting.jpg" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="carousel-images/amazon_prime.png" alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-          </div>
-        </div>
-        <div class="menu-4">country</div>
-        <div class="menu-5">sign in</div>
-        <div class="menu-6">orders</div>
-        <div class="menu-7">cart</div>
-      </div>
-    </nav>
-
-    <!-- Carousel Amazon Promotional Images (Marilou) -->
-
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="carousel-images/last_minute_deal.jpg" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="carousel-images/new_gadgets.jpg" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="carousel-images/ontdek_apparaten.jpg" alt="Third slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="carousel-images/probeer30dagen_prijs.jpg" alt="Third slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="carousel-images/table_setting.jpg" alt="Third slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="carousel-images/amazon_prime.png" alt="Third slide">
-      </div>
-      </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-
-</body>
+        </section>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+    </body>
 
 </html>
