--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <nav>
             <div class="navbar-1">
                 <div class="menu-1">
-                    <div class="logo"><img src="/image/amazonlogo.jpg" alt="image"></div>
+                    <div class="logo"><img src="image/amazonlogo.jpg" alt="image"></div>
                 </div>
                 <div class="menu-2">
                     <div class="address">
-                        <div class="navchild"><img src="/image/address logo.jpg" alt="logo"></div>
+                        <div class="navchild"><img src="image/address logo.jpg" alt="logo"></div>
                         <div class="navchild2">
                             <div class="address-1">Hello</div>
                             <div class="signchild-2">Select your address</div>
@@ -97,6 +97,44 @@
                 </a>
             </div>
         </section>
+
+        <!-- Cards-->
+
+        <div class="card" style="width: 25rem;">
+          <div class="card-body">
+            <div class="card-header">
+              <h5 class="card-title">Gadgets</h5>
+            </div>
+            <div class="image-content">
+              <div class="images">
+                <img src="card-images/jbl.jpg">
+              </div>
+              <div class="label">
+                <span class="name-label">Speakers</span>
+              </div>
+               <div class="images">
+                <img src="card-images/earpods.jpg">
+              </div>
+              <div class="label">
+                <span class="name-label">Earphones</span>
+              </div>
+               <div class="images">
+                <img src="card-images/headphones.jpg">
+              </div>
+              <div class="label">
+                <span class="name-label">Headphones</span>
+              </div>
+               <div class="images">
+                <img src="card-images/watch.jpg">
+              </div>
+              <div class="label">
+                <span class="name-label">Smartwatches</span>
+              </div>
+            </div>
+            <a href="#" class="card-link">view more</a>
+          </div>
+        </div>
+
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
