--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <nav>
             <div class="navbar-1">
                 <div class="menu-1">
-                    <div class="logo"><img src="/image/amazonlogo.jpg" alt="image"></div>
+                    <div class="logo"><img src="image/amazonlogo.jpg" alt="image"></div>
                 </div>
                 <div class="menu-2">
                     <div class="address">
-                        <div class="navchild"><img src="/image/address logo.jpg" alt="logo"></div>
+                        <div class="navchild"><img src="image/address logo.jpg" alt="logo"></div>
                         <div class="navchild2">
                             <div class="address-1">Hello</div>
                             <div class="signchild-2">Select your address</div>
